# seekwellpandas

./: .buildinfo  .bumpversion.cfg  .bumpversion.toml  .gitignore  MANIFEST.in  README.md  api.html  deploy.py  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  search.html  searchindex.js  setup.py
.github/workflows/: deploy.yml  docs.yml
_examples/: basic-usage.html  basic-usage.ipynb
_sources/: api.rst.txt  index.rst.txt
_sources/_examples/: basic-usage.ipynb.txt
docs/: Makefile  about.rst  api.rst  conf.py  index.rst
docs/source/: basic-usage.ipynb  conf.py
examples/: basic-usage.ipynb
src/pandalchemy/: __init__.py  _version.py  methods.py
src/seekwellpandas/: __init__.py  methods.py
